--- a/WebApplication/WebApplication/Views/Home/Index.cshtml
+++ b/WebApplication/WebApplication/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
     else
     {
         <p>Вы кто такой? Я вас не знаю. Идите</p>
-        <nav style="height:100px" class="nav-item"><a asp-controller="UserAccount" asp-action="Login" class="btn btn-primary">Регистрироваться</a></nav>
-        <nav style="height:100px" class="nav-item"><a asp-controller="UserAccount" asp-action="Register" class="btn btn-primary">Входить в учётную запись</a></nav>
+        <nav style="height:100px" class="nav-item"><a asp-controller="UserAccount" asp-action="Login" class="btn btn-primary">Входить в учётную запись</a></nav>
+        <nav style="height:100px" class="nav-item"><a asp-controller="UserAccount" asp-action="Register" class="btn btn-primary">Регистрироваться</a></nav>
     }
 </div>
